# FindAI

./: .env  .replit  main.py  package-lock.json  package.json  pyproject.toml  replit.md  requirements.txt  run.sh
client/src/: App.tsx  index.css
client/src/components/: ChatArea.tsx  ChatMessage.tsx  FileUpload.tsx  MessageInput.tsx  Sidebar.tsx
client/src/pages/: chat.tsx
server/: index.ts  routes.ts  storage.ts
server/services/: fileProcessor.ts  openai.ts
shared/: schema.ts
static/: index.html
